--- a/views/results.erb
+++ b/views/results.erb
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Pig Latin Web App</title>
+  <title>Book Results Page </title>
    <link rel="stylesheet" href="css/style.css" type="text/css">
  </head>
  <body>
