--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Price Table</h1>
       <form method="POST" action="/results">
-     <p>Please enter a book title</p>   <input type='text' name='sentence'>
+     <p>Please enter a book title</p>   <input type='text' name='book'>
      <input type='submit' value='submit'>
    </form>
  </body>
