--- a/views/results.erb
+++ b/views/results.erb
@@ -7,7 +7,7 @@
  </head>
  <body>
    <h1>WELCOME TO THE BOOK PRICE RESULTS</h1>
-   <h2> <%=@winner%> HAS THE BES PICE FOR YOUR BOOK
+   <h2> <%=@winner%> HAS THE BEST PRICE FOR YOUR BOOK
    </h2> 
  </body>
 </html>
