--- a/views/results.erb
+++ b/views/results.erb
@@ -7,7 +7,9 @@
  </head>
  <body>
    <h1>WELCOME TO THE BOOK PRICE RESULTS</h1>
-   <h2> <%=@winner%> HAS THE BEST PRICE FOR YOUR BOOK
+   <h2> <%=@winner%> has the best price 
    </h2> 
+   <h3> <%=@ap%> is Amazon's price </h3>
+   <h3> <%=@bp%> is Barnes and Noble's price </h3>
  </body>
 </html>
