--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="UTF-8">
   <title>Book Group Project v0.1</title>
  </head>
  <body>
-   <h1>Price Table</h1>
+   <h1>Book Surf</h1>
       <form method="POST" action="/results">
      <p>Please enter a book title</p>   <input type='text' name='book'>
      <input type='submit' value='submit'>
