--- a/views/results.erb
+++ b/views/results.erb
@@ -3,13 +3,13 @@
  <head>
   <meta charset="UTF-8">
   <title>Book Results Page </title>
-   <link rel="stylesheet" href="css/style.css" type="text/css">
+   <link rel="stylesheet" href="css/result_style.css" type="text/css">
  </head>
  <body>
    <h1>WELCOME TO THE BOOK PRICE RESULTS</h1>
-   <h2> <%=@winner%> has the best price 
+   <h2> <%=@winner%> has the best price for <%=@book%>
    </h2> 
-   <h3> <%=@ap%> is Amazon's price </h3>
-   <h3> <%=@bp%> is Barnes and Noble's price </h3>
+   <h3> $<%=@ap%> is Amazon's price </h3>
+   <h3> $<%=@bp%> is Barnes and Noble's price </h3>
  </body>
 </html>
