--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ h1 {
   font-family: times_new_roman,cursive;
 }
 body{
-  background-image: url(http://nhtheatreawards.org/Data/Sites/1/aaImages/graphics/Sky%20and%20Clouds/beautiful_sky-dsc01468-dws.jpg)
+  background-image: url(http://p1.pichost.me/i/56/1795887.jpg)
 }
 p{
   font-size: 25px;
