--- a/public/css/result_style.css
+++ b/public/css/result_style.css
@@ -17,5 +17,5 @@ h3 {
   background-color: white;
 }
 body{
-  background-image: url(http://nhtheatreawards.org/Data/Sites/1/aaImages/graphics/Sky%20and%20Clouds/beautiful_sky-dsc01468-dws.jpg)
+  background-image: url(http://p1.pichost.me/i/56/1795887.jpg)
 }
