--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <link href='http://fonts.googleapis.com/css?family=Pacifico|Dancing+Script|Lobster+Two' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Pacifico|Dancing+Script|Lobster+Two' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="UTF-8">
   <title>Book Group Project v0.1</title>
