--- a/views/results.erb
+++ b/views/results.erb
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <title>Book Results Page </title>
-   <link href='http://fonts.googleapis.com/css?family=Pacifico|Dancing+Script|Lobster+Two' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Pacifico|Dancing+Script|Lobster+Two' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="css/result_style.css" type="text/css">
  </head>
  <body>
